Enhance Nginx installation and service management scripts
- Refactored `10-install_nginx.sh` to include comprehensive logging functions for better traceability.
- Added checks for prerequisites before installation, ensuring dependencies are met.
- Improved Nginx configuration with enhanced security headers, gzip settings, and structured logging.
- Implemented a custom systemd service for Nginx with restart policies.
- Introduced log rotation for Nginx logs to manage disk space effectively.
- Updated `11-start_services.sh` to include detailed service management functions, including waiting for services to be ready and testing connectivity.
- Added functionality to verify the existence of required services before starting them.
- Enhanced error handling and logging throughout the service startup process.
- Provided clear access information and useful commands for managing the Alfresco stack.